(dev 216)chat backend logic (#3)
* Infra for conversation support

* Comment fixes

* Merging migration

* Conversation Drafts

* Conversation Drafts

* Conversation Drafts

* Conversation Drafts

* Conversation Drafts

* Remove unused models

* Basic Agent Setup And Integration in place

* logic updates

* Refactoring for controllers

* Dummy user and project setup

* Update models.py

* Add connection pooling to db

* Sanity fixes

* Naming refactors

* General logic for conversation creation + message management is up

* moved to uuid7 to have time ordered ids for better indexing

* Agent Table Support

* Support for agent table and router

* System message integration for conversation starter

* User Conversation Fetching Support

* Update conversation_service.py

* Update conversation_service.py

* Streaming chat

* Insertion support in database for message_stream

* Support for regeneration

* Update conversation_service.py

* Update projects_service.py

* Fixing agent setup

* Support for Tool Calling Agent

* removing useless comments

* Update .env.template

* schema fixes

* Tool fixes

* Fixing runnable with historuy

* Memory seperation

* PG intergation

* Delete history_manager.py

* Better naming imports

* Naming fixes

* Update intelligent_tool_using_orchestrator.py

* Tool and chain fix

* Fixing models

* Modding Message Model to support Regenration

* Support for regeneration

* Logical fixes

* Update message_service.py

* Regenaration fixes

* Fixed streaming storage to db issue

* Msg geneartion and storage fix

* Update conversation_service.py

* Minor fixes

* Improved logic and consistency

* Update conversation_service.py

* Create dockerfile

* Update chat_history_service.py

* comment fixes

--- a/.env.template
+++ b/.env.template
@@ -2,3 +2,5 @@ ENV= development
 OPENAI_API_KEY=
 OPENAI_MODEL_REASONING=
 POSTGRES_SERVER=postgresql://postgres:mysecretpassword@localhost:5432/momentum
+defaultUsername= defaultuser
+AGENTOPS_API_KEY= 
