--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,18 @@ gunicorn
 python-dotenv
 psycopg2
 psycopg2-binary
+openai
+duckduckgo-search
+uuid6
+aiohttp
+langchain
+langchain-openai
+langchain-community
+agentops
+
+# Additional dependencies for specific tools
+pytrends
+wikipedia-api
+langgraph
+langchain-postgres 
+psycopg[binary,pool]
