--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,17 @@ sqlalchemy
 alembic
 gunicorn
 python-dotenv
+postgres
+# psycopg2
 psycopg2-binary
+neo4j
+tree-sitter<=0.21.3
+tree-sitter-languages
+tqdm
+grep-ast
+pygments
+networkx
+blar-graph
 openai
 duckduckgo-search
 uuid6
@@ -12,11 +22,13 @@ aiohttp
 langchain
 langchain-openai
 langchain-community
-agentops
-
-# Additional dependencies for specific tools
 pytrends
 wikipedia-api
 langgraph
 langchain-postgres 
-psycopg[binary,pool]
+pymongo
+firebase_admin
+portkey_ai
+gitPython
+PyGithub
+google-cloud-secret-manager
