Project routes and Github Route (#13)
* added project routes, added docker container in docker compose,updated envtemplate and added fix for ssl error for mongo in development

* added project routes

* removed redundant code

* Delete firebase_service_account.json:Zone.Identifier

* added github routes

* separated code from router and added controller methods

* updated env template

* updated Project and Github Controller

* added back connection pooling

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -29,6 +29,17 @@ services:
     networks:
       - app-network
 
+  mongodb:
+    image: mongo:latest
+    container_name: mongodb
+    restart: always
+    environment:
+      - MONGO_INITDB_DATABASE=momentum
+    ports:
+      - "27017:27017"
+    networks:
+      - app-network
+
   redis:
     image: redis:latest
     container_name: redis_broker
