--- a/.env.template
+++ b/.env.template
@@ -1,5 +1,20 @@
 ENV= development
 OPENAI_API_KEY=
-OPENAI_MODEL_REASONING=
+OPENAI_MODEL_REASONING= 
+# POSTGRES_SERVER=postgresql://postgres:mysecretpassword@host.docker.internal:5432/momentum Use this when using WSL
 POSTGRES_SERVER=postgresql://postgres:mysecretpassword@localhost:5432/momentum
+MONGO_URI=mongodb://127.0.0.1:27017
+MONGODB_DB_NAME=momentum
+NEO4J_URI=bolt://127.0.0.1:7687
+NEO4J_USERNAME=neo4j
+NEO4J_PASSWORD=mysecretpassword
+REDISHOST=127.0.0.1
+REDISPORT=6379
+BROKER_URL=redis://127.0.0.1:6379/0
+CELERY_QUEUE_NAME=dev
+PORTKEY_API_KEY= 
+GITHUB_PRIVATE_KEY=
+GITHUB_APP_ID= 
+GCP_PROJECT= 
 defaultUsername= defaultuser
+FIREBASE_SERVICE_ACCOUNT=
