(Dev-195)(dev-196) Basic structure for agents & KG tool (#14)
* Basic structure for agents

* Ruff fixes

* adding new agent

* Api Updates

* import bug fix

* mongo support

* minor fixes

* Fixes

* ruff checks

* Simplifying parsing

* Pre commit hook fixes

* Linting fixes

* Import fixes

* parsing bug fixes

* Update projects_service.py

* Agent api seperation

* Update main.py

* Conversation creation & listing fixes

* Refactors to config provider

* Revert "Refactors to config provider"

This reverts commit 8ee0128ed4d6e1b7e9a275b3575423170fd4023c.

* Renaming config provider

* Getting conversation post message running

* Made KG debgging agent work

* Fixes to codebase qna agent

* Update start.sh

* Redundancy fixes

* Reverting docker

* Update codebase_qna_agent.py

* Citation support

* Agent improvements

* ruff fixes

* Pre commit hook changes

* Update code_tools.py

* Update conversation_service.py

* Adding project id support

* Renaming Agent

* Update github_service.py

* Agent ids as list

* Agents

* Agent id fixes

* Update 20240828094302_48240c0ce09e_add_agent_id_support_in_conversation_.py

* Update 20240828094302_48240c0ce09e_add_agent_id_support_in_conversation_.py

* Update 20240828094302_48240c0ce09e_add_agent_id_support_in_conversation_.py

--- a/.env.template
+++ b/.env.template
@@ -1,20 +1,23 @@
 ENV= development
 OPENAI_API_KEY=
-OPENAI_MODEL_REASONING= 
+OPENAI_MODEL_REASONING=
 # POSTGRES_SERVER=postgresql://postgres:mysecretpassword@host.docker.internal:5432/momentum Use this when using WSL
 POSTGRES_SERVER=postgresql://postgres:mysecretpassword@localhost:5432/momentum
-MONGO_URI=mongodb://127.0.0.1:27017
-MONGODB_DB_NAME=momentum
-NEO4J_URI=bolt://127.0.0.1:7687
-NEO4J_USERNAME=neo4j
-NEO4J_PASSWORD=mysecretpassword
+MONGO_URI= mongodb://127.0.0.1:27017
+MONGODB_DB_NAME= momentum
+NEO4J_URI= bolt://127.0.0.1:7687
+NEO4J_USERNAME= neo4j
+NEO4J_PASSWORD= mysecretpassword
 REDISHOST=127.0.0.1
 REDISPORT=6379
 BROKER_URL=redis://127.0.0.1:6379/0
 CELERY_QUEUE_NAME=dev
-PORTKEY_API_KEY= 
-GITHUB_PRIVATE_KEY=
-GITHUB_APP_ID= 
-GCP_PROJECT= 
+PORTKEY_API_KEY=
+GCP_PROJECT=
 defaultUsername= defaultuser
 FIREBASE_SERVICE_ACCOUNT=
+KNOWLEDGE_GRAPH_URL=
+GITHUB_APP_ID=
+GITHUB_PRIVATE_KEY=
+PROJECT_PATH=projects
+KNOWLEDGE_GRAPH_PROJECT_ID=
