--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,4 @@
 version: '3.8'
-
 services:
   postgres:
     image: postgres:latest
@@ -23,6 +22,8 @@ services:
     container_name: neo4j
     environment:
       NEO4J_AUTH: neo4j/mysecretpassword
+      NEO4JLABS_PLUGINS: '["apoc"]' # Add this line to include APOC plugin
+      NEO4J_dbms_security_procedures_unrestricted: 'apoc.*' # Allow APOC procedures
     ports:
       - "7474:7474"
       - "7687:7687"
@@ -53,8 +54,8 @@ services:
     container_name: weaviate
     command: "--host 0.0.0.0 --port 8082 --scheme http"
     ports:
-      - 8082:8082
-      - 50051:50051
+      - "8082:8082"
+      - "50051:50051"
     restart: on-failure
     environment:
       QUERY_DEFAULTS_LIMIT: 25
