[DEV-222, DEV-258] Support public repo and trigger email on completion  (#15)
* added email sending on successfull parsing and added fetching from public repo

* added env for sending email and changed exception handling to handle 404 while cloning the repo

* linted the code

* fixed project list route changed getpublicprivated repo logic for 404 error handling fixed emailsend

* fixed email helper function

* changed example@momentum to support and separated exception handling for public and private repos

* fixed email helper function

--- a/.env.template
+++ b/.env.template
@@ -21,3 +21,5 @@ GITHUB_APP_ID=
 GITHUB_PRIVATE_KEY=
 PROJECT_PATH=projects
 KNOWLEDGE_GRAPH_PROJECT_ID=
+TRANSACTION_EMAILS_ENABLED=
+EMAIL_FROM_ADDRESS=
