Tools for code (#27)
* Remove mongo support

* cleanup

* tools and agent setup

* db related refactors

* Update main.py

* Update agents_service.py

* runtime refactos

* Tool fixes

* neo4j needs fixing

* Fixes for id based retrival

* agent updates

* Agent updates

* saves

* ruff fixes

* Refactors

* Update conversation_service.py

* Update main.py

* Update conversation_service.py

* Update code_retrieval_agent.py

* linting

* fixes

* formatting

* Fixes

* Tool and agent update

* Need to improve graph json struvture

* Graph tools

* Graph relation fix

* cleanup

* Code fgraph improvements

* celery into

* Celery improvements

* Refactors

* refactors and cleanup

* Celery fixes

* Celery Integration Done

* Model fixes

* Models consistency + Celery fixes

* Models fixing

* Fixes

* model fixes

* minor renaming

* fixes for celery app

* Fixes

* Update code_retrieval_agent.py

* pre commit changes

* Update github_service.py

* Update github_service.py

* added todo

* Fixes

* Public and private repos work with everything

* fixes

* Github fixes

* Update parsing_tasks.py

--- a/requirements.txt
+++ b/requirements.txt
@@ -45,7 +45,6 @@ sentence-transformers
 scikit-learn
 requests
 embedchain
-embedchain[weaviate]
 mongoengine
 resend
 transformers
@@ -53,3 +52,7 @@ torch
 sentence-transformers
 nltk
 langchain_anthropic
+celery
+redis
+flower
+chardet
