new relic support (#51)

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -3,7 +3,7 @@ nodaemon=true
 loglevel=debug
 
 [program:celery]
-command=/bin/bash -c 'source /app/.env && echo "Starting Celery Worker..." && celery -A app.celery.celery_app worker --loglevel=debug -Q ${CELERY_QUEUE_NAME}_process_repository -E --concurrency=2'
+command=/bin/bash -c 'source /app/.env && echo "Starting Celery Worker..." && newrelic-admin run-program celery -A app.celery.celery_app worker --loglevel=debug -Q ${CELERY_QUEUE_NAME}_process_repository -E --concurrency=2'
 autostart=true
 autorestart=true
 stdout_logfile=/dev/stdout
@@ -13,7 +13,7 @@ stdout_logfile_maxbytes=0
 user=root
 
 [program:flower]
-command=/bin/bash -c 'source /app/.env && echo "Starting Flower..." && celery -A app.celery.celery_app flower --port=5555 --broker=${BROKER_URL}'
+command=/bin/bash -c 'source /app/.env && echo "Starting Flower..." && newrelic-admin run-program celery -A app.celery.celery_app flower --port=5555 --broker=${BROKER_URL}'
 autostart=true
 autorestart=true
 stdout_logfile=/dev/stdout
@@ -23,7 +23,7 @@ stdout_logfile_maxbytes=0
 user=root
 
 [program:gunicorn]
-command=/bin/bash -c 'source /app/.env && echo "Starting Gunicorn..." && gunicorn --workers $(nproc) --worker-class uvicorn.workers.UvicornWorker --timeout 1800 --bind 0.0.0.0:8001 --log-level debug app.main:app'
+command=/bin/bash -c 'source /app/.env && echo "Starting Gunicorn..." && newrelic-admin run-program gunicorn --workers $(nproc) --worker-class uvicorn.workers.UvicornWorker --timeout 1800 --bind 0.0.0.0:8001 --log-level debug app.main:app'
 autostart=true
 autorestart=true
 stdout_logfile=/dev/stdout
