--- a/celery-api-supervisord.conf
+++ b/celery-api-supervisord.conf
@@ -3,7 +3,7 @@ nodaemon=true
 loglevel=debug
 
 [program:celery]
-command=/bin/bash -c 'source /app/.env && echo "Starting Celery Worker..." && newrelic-admin run-program celery -A app.celery.celery_app worker --loglevel=debug -Q ${CELERY_QUEUE_NAME}_process_repository -E --concurrency=2'
+command=/bin/bash -c 'source /app/.env && echo "Starting Celery Worker..." && celery -A app.celery.celery_app worker --loglevel=debug -Q ${CELERY_QUEUE_NAME}_process_repository -E --concurrency=2'
 autostart=true
 autorestart=true
 stdout_logfile=/dev/stdout
@@ -13,11 +13,11 @@ stdout_logfile_maxbytes=0
 user=root
 
 [program:flower]
-command=/bin/bash -c 'source /app/.env && echo "Starting Flower..." && newrelic-admin run-program celery -A app.celery.celery_app flower --port=5555 --broker=${BROKER_URL}'
+command=/bin/bash -c 'source /app/.env && echo "Starting Flower..." && celery -A app.celery.celery_app flower --port=5555 --broker=${BROKER_URL}'
 autostart=true
 autorestart=true
-stdout_logfile=/dev/stdout
-stderr_logfile=/dev/stderr
-stderr_logfile_maxbytes=0
-stdout_logfile_maxbytes=0
+# stdout_logfile=/dev/stdout
+# stderr_logfile=/dev/stderr
+# stderr_logfile_maxbytes=0
+# stdout_logfile_maxbytes=0
 user=root
