--- a/convo-api-supervisord.conf
+++ b/convo-api-supervisord.conf
@@ -3,7 +3,7 @@ nodaemon=true
 loglevel=debug
 
 [program:gunicorn]
-command=/bin/bash -c 'source /app/.env && echo "Starting Gunicorn..." && gunicorn --workers $(nproc) --worker-class uvicorn.workers.UvicornWorker --timeout 1800 --bind 0.0.0.0:8001 --log-level debug app.main:app'
+command=/bin/bash -c 'source /app/.env && echo "Starting Gunicorn..." && newrelic-admin run-program gunicorn --workers $(nproc) --worker-class uvicorn.workers.UvicornWorker --timeout 1800 --bind 0.0.0.0:8001 --log-level debug app.main:app'
 autostart=true
 autorestart=true
 stdout_logfile=/dev/stdout
