--- a/deployment/stage/celery/celery-api-supervisord.conf
+++ b/deployment/stage/celery/celery-api-supervisord.conf
@@ -3,7 +3,7 @@ nodaemon=true
 loglevel=debug
 
 [program:celery]
-command=/bin/bash -c 'source /app/.env && echo "Starting Celery Worker with New Relic..." && newrelic-admin run-program celery -A app.celery.celery_app worker --loglevel=debug -Q "${CELERY_QUEUE_NAME}_process_repository" -E --concurrency=3'
+command=/bin/bash -c 'source /app/.env && alembic upgrade head && echo "Starting Celery Worker with New Relic..." && newrelic-admin run-program celery -A app.celery.celery_app worker --loglevel=info -Q "${CELERY_QUEUE_NAME}_process_repository" -E --concurrency=3'
 autostart=true
 autorestart=true
 stdout_logfile=/dev/stdout
