--- a/.env.template
+++ b/.env.template
@@ -28,4 +28,4 @@ ANTHROPIC_API_KEY=
 POSTHOG_API_KEY=
 POSTHOG_HOST=
 POTPIE_PLUS_BASE_URL=http://localhost:8080
-POTPIE_PLUS_HMAC_KEY=
+POTPIE_PLUS_HMAC_KEY=123
