--- a/.env.template
+++ b/.env.template
@@ -1,7 +1,7 @@
 ENV= development
 OPENAI_API_KEY=
 OPENAI_MODEL_REASONING=
-# POSTGRES_SERVER=postgresql://postgres:mysecretpassword@host.docker.internal:5432/momentum #for use with wsgl
+# POSTGRES_SERVER=postgresql://postgres:mysecretpassword@host.docker.internal:5432/momentum Use this when using WSL
 POSTGRES_SERVER=postgresql://postgres:mysecretpassword@localhost:5432/momentum
 MONGO_URI= mongodb://127.0.0.1:27017
 MONGODB_DB_NAME= momentum
@@ -27,5 +27,3 @@ RESEND_API_KEY=
 ANTHROPIC_API_KEY=
 POSTHOG_API_KEY=
 POSTHOG_HOST=
-POTPIE_PLUS_BASE_URL=http://localhost:8080
-POTPIE_PLUS_HMAC_KEY=123
